<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mekuate.kyala.ui.ui.Jouer.selectNiveau">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        app:titleTextColor="@color/colorWhite"
        app:title="@string/niveau"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="outsideOverlay">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.CardView
        android:id="@+id/card_premier_trimestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_margin="@dimen/card_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/card_image_height"
                android:layout_height="@dimen/card_image_height"
                android:src="@drawable/levelone"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"

                />
            <TextView
                android:id="@+id/premier_trimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail"
                android:text="@string/premierTrimestre"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/BigTitle"
                android:background="@color/colorVertCitron"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_deuxieme_trimestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:layout_margin="@dimen/card_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail1"
                android:layout_width="@dimen/card_image_height"
                android:layout_height="@dimen/card_image_height"
                android:src="@drawable/leveltwo"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                />
            <TextView
                android:id="@+id/deuxieme_trimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail1"
                android:text="@string/deuxiemeTrimestre"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/BigTitle"
                android:layout_marginTop="40dp"
                android:background="@color/colorYellow"
                android:textAlignment="center"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_troisieme_trimestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail2"
                android:layout_width="@dimen/card_image_height"
                android:layout_height="@dimen/card_image_height"
                android:src="@drawable/levelthree"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/troisieme_trimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail2"
                android:text="@string/troisiemeTrimestre"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/BigTitle"
                android:background="@color/colorViolet"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_examen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail3"
                android:layout_width="@dimen/card_image_height"
                android:layout_height="@dimen/card_image_height"
                android:src="@drawable/levelexamen"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail3"
                android:text="@string/Examen"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/BigTitle"
                android:layout_marginTop="40dp"
                android:background="@color/colorOrange"
                android:textAlignment="center"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>
